added printer support (click image to select for printing)

--- a/static/index.html
+++ b/static/index.html
@@ -55,6 +55,10 @@
         <kodqr style="display: none;">
             <img src="./img/qrREAL.svg">
         </kodqr>
+        <printus>
+            <!-- <kont> -->
+            <!-- </kont> -->
+        </printus>
         <!-- <script type="text/js" src="./js/qr.js"></script> -->
         <script src="./js/main.js"></script>
     </body>
